fix(Applications): Fifed bug with wrong padding after closing category

--- a/src/features/home/ContextSearch/Applications/styles.scss
+++ b/src/features/home/ContextSearch/Applications/styles.scss
@@ -66,7 +66,6 @@
 
   width: 100%;
   max-width: 98%; // TODO: fix bug with horizontal scroll
-  min-height: 400px;
 }
 
 .tree-hierarchy-wrapper > .tree-hierarchy {
